# tdcf_test

./: CMakeLists.txt  Matrix.hpp  README.md  main.cpp  matrix1.txt  matrix2.txt
cmake_config/: log1.hpp.in  log2.hpp.in
frame/: Communicator.cpp  Communicator.hpp  Identity.hpp  ProcessingRules.hpp  Processor.cpp  Processor.hpp
log_test/: LogData.hpp  LogRules.cpp  LogRules.hpp  test.cpp  test.hpp
manage/: Manager.cpp  Manager.hpp
martix/: MartixData.hpp  MartixRules.cpp  MartixRules.hpp  Matrix.hpp  test.cpp  test.hpp
resource/: log_test.properties
